--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monkeyeditor",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -12,7 +12,9 @@
     "notistack": "^1.0.0",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-scripts": "3.4.3",
     "react-simple-code-editor": "^0.11.0"
   },
